Cambio desde Texpad
Esta muy bueno esto

--- a/test.tex
+++ b/test.tex
@@ -2,5 +2,7 @@
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
 \begin{document}
-	Procesos estocásticos
+	Procesos estocásticos, cheat sheet.
+	
+	
 \end{document}
