Creado mediante Colaboratory

--- a/Copia_de_Notebook.ipynb
+++ b/Copia_de_Notebook.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "Copia de Notebook.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -56,7 +57,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Sección nueva"
+        "# Esta es una nueva Sección"
       ]
     },
     {
