--- a/T1.tex
+++ b/T1.tex
@@ -17,6 +17,9 @@
 \end{center}
 \hrule
 \par\bigskip
+
+Pongamos una linea adicional
+
 De los problemas siguientes debes entrgar los problemas 2, 3, 11, 12, 14, 15, 16 y 18. Sin embargo es altamente recomendable que intentes resolverlos todos.
 \begin{enumerate}
     \item Sea $X_n$ con $n\geq 0$ la cadena de Markov de dos estados. Encuentra:
