--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -18,13 +18,13 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "print(\"Hola Ger!\")"
+    "print(\"Vamos a hacer algunas pruebas con Git!!!\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -38,9 +38,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6+"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
