--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola Ger!\n"
+      "Ahora va de regreso, de iPad a Github!\n"
      ]
     }
    ],
@@ -18,13 +18,20 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "print(\"Vamos a hacer algunas pruebas con Git!!!\")"
+    "print(\"Ahora va de regreso, de iPad a Github!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -38,7 +45,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.6+"
   }
  },
  "nbformat": 4,
