Edicion de notebook desde VSCode

--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ahora va de regreso, de iPad a Github!\n"
+      "Veamos si puedo trabajar desde VSCode y Github!\n"
      ]
     }
    ],
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "print(\"Ahora va de regreso, de iPad a Github!\")"
+    "print(\"Veamos si puedo trabajar desde VSCode y Github!\")"
    ]
   },
   {
