Prueba en rama alternativa
Haga cambio en rama alternativa

--- a/T1.tex
+++ b/T1.tex
@@ -17,7 +17,8 @@
 \end{center}
 \hrule
 \par\bigskip
-
+	Mas texto en rama alternativa
+	
 Pongamos una linea adicional
 
 De los problemas siguientes debes entrgar los problemas 2, 3, 11, 12, 14, 15, 16 y 18. Sin embargo es altamente recomendable que intentes resolverlos todos.
