Agregue texto al origin

--- a/T1.tex
+++ b/T1.tex
@@ -18,6 +18,8 @@
 \hrule
 \par\bigskip
 	Mas texto en rama alternativa
+
+    Esto lo edite directo en origin/master?
 	
 Pongamos una linea adicional
 
