--- a/T2.tex
+++ b/T2.tex
@@ -88,5 +88,5 @@ $$
 P\left(\left.X_{n+m}=x_{n+m}, \ldots, X_{n+1} = x_{n+1}\right\vert X_n = x_n\right) = P\left(\left.X_{m}=x_{n+m}, \ldots, X_{1} = x_{n+1}\right\vert X_0 = x_n\right)
 $$
 \end{enumerate}
-
+Esto lo escribo desde VSCode web
 \end{document}
