Cambio de estructura
Cambie el orden de los documentos.
Inclui una carpeta para tareas y otra para notas

--- a/tareas/T1.tex
+++ b/tareas/T1.tex
@@ -141,6 +141,10 @@ De los problemas siguientes debes entrgar los problemas 2, 3, 11, 12, 14, 15, 16
 %          $$
 %              P\left(\left.X_{n+m}=x_{n+m}, \ldots, X_{n+1} = x_{n+1}\right\vert X_n = x_n\right) = P\left(\left.X_{m}=x_{n%+m}, \ldots, X_{1} = x_{n+1}\right\vert X_0 = x_n\right)
 %          $$
-          
+
+% TODO: Incluir mas problemas.          
+
+
+
 \end{enumerate}
 \end{document}
