--- a/notas/notas.tex
+++ b/notas/notas.tex
@@ -1,4 +1,4 @@
 \documentclass{article}
 \begin{document}
-	Este es un documento
+	Este  es el mismo documento pero lo edite desde overleaf veremos si  puedo sincronizarlo con git
 \end{document}
