Mas lineas desde el iPad

--- a/notas/notas.tex
+++ b/notas/notas.tex
@@ -1,4 +1,6 @@
 \documentclass{article}
 \begin{document}
 	Este  es el mismo documento pero lo edite desde overleaf veremos si  puedo sincronizarlo con git
+	
+	Vamos a meterle mas lineas desde mi iPad
 \end{document}
