Mandamos nuevas lineas desde overleaf

--- a/notas/notas.tex
+++ b/notas/notas.tex
@@ -2,5 +2,10 @@
 \begin{document}
 	Este  es el mismo documento pero lo edite desde overleaf veremos si  puedo sincronizarlo con git
 	
-	Vamos a meterle mas lineas desde mi iPad
+Vamos a meterle mas lineas desde mi iPad
+
+Y nuevas lineas desde overleaf
+    
+
+ 
 \end{document}
