--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -23,6 +23,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   uno  dos\n",
+      "0    1    4\n",
+      "1    2    5\n",
+      "2    3    6\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(data={'uno':[1,2,3], 'dos':[4,5,6]})\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -31,7 +52,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -45,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.6+"
   }
  },
  "nbformat": 4,
