--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -2,44 +2,125 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Veamos si puedo trabajar desde VSCode y Github!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from pathlib import Path\n",
+    "import yaml\n",
     "\n",
-    "\n",
-    "print(\"Veamos si puedo trabajar desde VSCode y Github!\")"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_yaml = Path('/home/ger/GerDrive/Documentos/code_snippets/git_test/test.yaml') \n",
+    "\n",
+    "\n",
+    "rutas = {'home': Path.home(),\n",
+    "         'wd':Path('/home/ger/GerDrive/Documentos/code_snippets/git_test/procesos_estocasticos')\n",
+    "         }\n",
+    "\n",
+    "\n",
+    "with open(path_yaml, 'w',encoding='utf8') as f:\n",
+    "    yaml.dump(rutas, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   uno  dos\n",
-      "0    1    4\n",
-      "1    2    5\n",
-      "2    3    6\n"
+     "ename": "TypeError",
+     "evalue": "expected str, bytes or os.PathLike object, not dict",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/ger/GerDrive/Documentos/code_snippets/git_test/procesos_estocasticos/test_git.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/ger/GerDrive/Documentos/code_snippets/git_test/procesos_estocasticos/test_git.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(path_yaml, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/ger/GerDrive/Documentos/code_snippets/git_test/procesos_estocasticos/test_git.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     y \u001b[39m=\u001b[39m yaml\u001b[39m.\u001b[39;49mload(f, Loader\u001b[39m=\u001b[39;49myaml\u001b[39m.\u001b[39;49mLoader)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/yaml/__init__.py:81\u001b[0m, in \u001b[0;36mload\u001b[0;34m(stream, Loader)\u001b[0m\n\u001b[1;32m     79\u001b[0m loader \u001b[39m=\u001b[39m Loader(stream)\n\u001b[1;32m     80\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 81\u001b[0m     \u001b[39mreturn\u001b[39;00m loader\u001b[39m.\u001b[39;49mget_single_data()\n\u001b[1;32m     82\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m     83\u001b[0m     loader\u001b[39m.\u001b[39mdispose()\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/yaml/constructor.py:51\u001b[0m, in \u001b[0;36mBaseConstructor.get_single_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     49\u001b[0m node \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_single_node()\n\u001b[1;32m     50\u001b[0m \u001b[39mif\u001b[39;00m node \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconstruct_document(node)\n\u001b[1;32m     52\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/yaml/constructor.py:60\u001b[0m, in \u001b[0;36mBaseConstructor.construct_document\u001b[0;34m(self, node)\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstate_generators \u001b[39m=\u001b[39m []\n\u001b[1;32m     59\u001b[0m     \u001b[39mfor\u001b[39;00m generator \u001b[39min\u001b[39;00m state_generators:\n\u001b[0;32m---> 60\u001b[0m         \u001b[39mfor\u001b[39;00m dummy \u001b[39min\u001b[39;00m generator:\n\u001b[1;32m     61\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[1;32m     62\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconstructed_objects \u001b[39m=\u001b[39m {}\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/yaml/constructor.py:413\u001b[0m, in \u001b[0;36mSafeConstructor.construct_yaml_map\u001b[0;34m(self, node)\u001b[0m\n\u001b[1;32m    411\u001b[0m data \u001b[39m=\u001b[39m {}\n\u001b[1;32m    412\u001b[0m \u001b[39myield\u001b[39;00m data\n\u001b[0;32m--> 413\u001b[0m value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconstruct_mapping(node)\n\u001b[1;32m    414\u001b[0m data\u001b[39m.\u001b[39mupdate(value)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/yaml/constructor.py:218\u001b[0m, in \u001b[0;36mSafeConstructor.construct_mapping\u001b[0;34m(self, node, deep)\u001b[0m\n\u001b[1;32m    216\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(node, MappingNode):\n\u001b[1;32m    217\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mflatten_mapping(node)\n\u001b[0;32m--> 218\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mconstruct_mapping(node, deep\u001b[39m=\u001b[39;49mdeep)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/yaml/constructor.py:143\u001b[0m, in \u001b[0;36mBaseConstructor.construct_mapping\u001b[0;34m(self, node, deep)\u001b[0m\n\u001b[1;32m    140\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(key, collections\u001b[39m.\u001b[39mabc\u001b[39m.\u001b[39mHashable):\n\u001b[1;32m    141\u001b[0m         \u001b[39mraise\u001b[39;00m ConstructorError(\u001b[39m\"\u001b[39m\u001b[39mwhile constructing a mapping\u001b[39m\u001b[39m\"\u001b[39m, node\u001b[39m.\u001b[39mstart_mark,\n\u001b[1;32m    142\u001b[0m                 \u001b[39m\"\u001b[39m\u001b[39mfound unhashable key\u001b[39m\u001b[39m\"\u001b[39m, key_node\u001b[39m.\u001b[39mstart_mark)\n\u001b[0;32m--> 143\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconstruct_object(value_node, deep\u001b[39m=\u001b[39;49mdeep)\n\u001b[1;32m    144\u001b[0m     mapping[key] \u001b[39m=\u001b[39m value\n\u001b[1;32m    145\u001b[0m \u001b[39mreturn\u001b[39;00m mapping\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/yaml/constructor.py:102\u001b[0m, in \u001b[0;36mBaseConstructor.construct_object\u001b[0;34m(self, node, deep)\u001b[0m\n\u001b[1;32m    100\u001b[0m     data \u001b[39m=\u001b[39m constructor(\u001b[39mself\u001b[39m, node)\n\u001b[1;32m    101\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 102\u001b[0m     data \u001b[39m=\u001b[39m constructor(\u001b[39mself\u001b[39;49m, tag_suffix, node)\n\u001b[1;32m    103\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data, types\u001b[39m.\u001b[39mGeneratorType):\n\u001b[1;32m    104\u001b[0m     generator \u001b[39m=\u001b[39m data\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/yaml/constructor.py:648\u001b[0m, in \u001b[0;36mFullConstructor.construct_python_object_apply\u001b[0;34m(self, suffix, node, newobj)\u001b[0m\n\u001b[1;32m    646\u001b[0m     listitems \u001b[39m=\u001b[39m value\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mlistitems\u001b[39m\u001b[39m'\u001b[39m, [])\n\u001b[1;32m    647\u001b[0m     dictitems \u001b[39m=\u001b[39m value\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mdictitems\u001b[39m\u001b[39m'\u001b[39m, {})\n\u001b[0;32m--> 648\u001b[0m instance \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmake_python_instance(suffix, node, args, kwds, newobj)\n\u001b[1;32m    649\u001b[0m \u001b[39mif\u001b[39;00m state:\n\u001b[1;32m    650\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mset_python_instance_state(instance, state)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/yaml/constructor.py:722\u001b[0m, in \u001b[0;36mUnsafeConstructor.make_python_instance\u001b[0;34m(self, suffix, node, args, kwds, newobj)\u001b[0m\n\u001b[1;32m    721\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmake_python_instance\u001b[39m(\u001b[39mself\u001b[39m, suffix, node, args\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, kwds\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, newobj\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[0;32m--> 722\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m(UnsafeConstructor, \u001b[39mself\u001b[39;49m)\u001b[39m.\u001b[39;49mmake_python_instance(\n\u001b[1;32m    723\u001b[0m         suffix, node, args, kwds, newobj, unsafe\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/yaml/constructor.py:593\u001b[0m, in \u001b[0;36mFullConstructor.make_python_instance\u001b[0;34m(self, suffix, node, args, kwds, newobj, unsafe)\u001b[0m\n\u001b[1;32m    591\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__new__\u001b[39m(\u001b[39mcls\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[1;32m    592\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 593\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39;49m(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/pathlib.py:1082\u001b[0m, in \u001b[0;36mPath.__new__\u001b[0;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1080\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m Path:\n\u001b[1;32m   1081\u001b[0m     \u001b[39mcls\u001b[39m \u001b[39m=\u001b[39m WindowsPath \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mname \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mnt\u001b[39m\u001b[39m'\u001b[39m \u001b[39melse\u001b[39;00m PosixPath\n\u001b[0;32m-> 1082\u001b[0m \u001b[39mself\u001b[39m \u001b[39m=\u001b[39m \u001b[39mcls\u001b[39;49m\u001b[39m.\u001b[39;49m_from_parts(args, init\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[1;32m   1083\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flavour\u001b[39m.\u001b[39mis_supported:\n\u001b[1;32m   1084\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mcannot instantiate \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m on your system\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1085\u001b[0m                               \u001b[39m%\u001b[39m (\u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m,))\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/pathlib.py:707\u001b[0m, in \u001b[0;36mPurePath._from_parts\u001b[0;34m(cls, args, init)\u001b[0m\n\u001b[1;32m    702\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m    703\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_from_parts\u001b[39m(\u001b[39mcls\u001b[39m, args, init\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[1;32m    704\u001b[0m     \u001b[39m# We need to call _parse_args on the instance, so as to get the\u001b[39;00m\n\u001b[1;32m    705\u001b[0m     \u001b[39m# right flavour.\u001b[39;00m\n\u001b[1;32m    706\u001b[0m     \u001b[39mself\u001b[39m \u001b[39m=\u001b[39m \u001b[39mobject\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__new__\u001b[39m(\u001b[39mcls\u001b[39m)\n\u001b[0;32m--> 707\u001b[0m     drv, root, parts \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_parse_args(args)\n\u001b[1;32m    708\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_drv \u001b[39m=\u001b[39m drv\n\u001b[1;32m    709\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_root \u001b[39m=\u001b[39m root\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/pathlib.py:691\u001b[0m, in \u001b[0;36mPurePath._parse_args\u001b[0;34m(cls, args)\u001b[0m\n\u001b[1;32m    689\u001b[0m     parts \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m a\u001b[39m.\u001b[39m_parts\n\u001b[1;32m    690\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 691\u001b[0m     a \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39;49mfspath(a)\n\u001b[1;32m    692\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(a, \u001b[39mstr\u001b[39m):\n\u001b[1;32m    693\u001b[0m         \u001b[39m# Force-cast str subclasses to str (issue #21127)\u001b[39;00m\n\u001b[1;32m    694\u001b[0m         parts\u001b[39m.\u001b[39mappend(\u001b[39mstr\u001b[39m(a))\n",
+      "\u001b[0;31mTypeError\u001b[0m: expected str, bytes or os.PathLike object, not dict"
      ]
     }
    ],
    "source": [
-    "df = pd.DataFrame(data={'uno':[1,2,3], 'dos':[4,5,6]})\n",
-    "print(df)"
+    "with open(path_yaml, 'r') as f:\n",
+    "    y = yaml.load(f, Loader=yaml.Loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'home': PosixPath('/home/ger'),\n",
+       " 'wd': PosixPath('/home/ger/GerDrive/Documentos/code_snippets/git_test/procesos_estocasticos')}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = path_yaml.read_text()\n",
+    "y = y.format(home=Path.home())\n",
+    "y = yaml.load(y, Loader=yaml.Loader)\n",
+    "\n",
+    "globals().update(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'home': PosixPath('/home/ger'),\n",
+       " 'wd': PosixPath('/home/ger/GerDrive/Documentos/code_snippets/git_test/procesos_estocasticos')}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yaml.load(y, Loader=yaml.Loader)\n",
+    "yaml.load(y, Loader=yaml.Loader)\n"
    ]
   },
   {
@@ -52,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +147,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6+"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1f1f7fae84759820cc8e668ce77debc60b26fb93782f0499368965ebc9145114"
+   }
   }
  },
  "nbformat": 4,
