--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,24 +103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'home': PosixPath('/home/ger'),\n",
-       " 'wd': PosixPath('/home/ger/GerDrive/Documentos/code_snippets/git_test/procesos_estocasticos')}"
+       "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "yaml.load(y, Loader=yaml.Loader)\n",
-    "yaml.load(y, Loader=yaml.Loader)\n"
+    "wd.exists()"
    ]
   },
   {
