simplificacion de notebook

--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -9,26 +9,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "import yaml\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_yaml = Path('/home/ger/GerDrive/Documentos/code_snippets/git_test/procesos_estocasticos/test.yaml') \n",
-    "\n",
-    "rutas = {'home': Path.home(),\n",
-    "         'wd':Path('/home/ger/GerDrive/Documentos/code_snippets/git_test/procesos_estocasticos')\n",
-    "         }\n",
-    "\n",
-    "\n",
-    "with open(path_yaml, 'w',encoding='utf8') as f:\n",
-    "    yaml.dump(rutas, f)"
+    "import yaml"
    ]
   },
   {
@@ -37,8 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(path_yaml, 'r') as f:\n",
-    "    y = yaml.load(f, Loader=yaml.Loader)"
+    "\n",
+    "d = pd.DataFrame(data={'uno':[1,2,3],'dos':[4,5,6]})\n",
+    "\n",
+    "dy = yaml.dump(d)\n",
+    "\n",
+    "print(dy)"
    ]
   },
   {
