Cambio de parametros

--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -2,14 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "import yaml"
+    "import yaml\n",
+    "\n",
+    "import getpass\n",
+    "user = getpass.getuser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2680429935.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [38]\u001b[0;36m\u001b[0m\n\u001b[0;31m    path_yaml = Path(./'test.yaml')\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_yaml = Path('./test.yaml') \n",
+    "\n",
+    "y = path_yaml.read_text()\n",
+    "y = y.format(home=Path.home())\n",
+    "y = yaml.load(y, Loader=yaml.Loader)[user]\n",
+    "\n",
+    "print(y)\n",
+    "\n",
+    "#globals().update(y)"
    ]
   },
   {
@@ -18,33 +47,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "d = pd.DataFrame(data={'uno':[1,2,3],'dos':[4,5,6]})\n",
     "\n",
     "dy = yaml.dump(d)\n",
     "\n",
     "print(dy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_yaml = Path(Path.home()/\n",
-    "                 'GerDrive'/ \n",
-    "                 'Documentos'/ \n",
-    "                 'code_snippets'/\n",
-    "                 'git_test'/ \n",
-    "                 'procesos_estocasticos'/\n",
-    "                 'test.yaml') \n",
-    "\n",
-    "y = path_yaml.read_text()\n",
-    "y = y.format(home=Path.home())\n",
-    "y = yaml.load(y, Loader=yaml.Loader)\n",
-    "\n",
-    "globals().update(y)"
    ]
   }
  ],
