--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -17,18 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2680429935.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [38]\u001b[0;36m\u001b[0m\n\u001b[0;31m    path_yaml = Path(./'test.yaml')\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path_yaml = Path('./test.yaml') \n",
     "\n",
@@ -36,9 +27,7 @@
     "y = y.format(home=Path.home())\n",
     "y = yaml.load(y, Loader=yaml.Loader)[user]\n",
     "\n",
-    "print(y)\n",
-    "\n",
-    "#globals().update(y)"
+    "globals().update(y)"
    ]
   },
   {
