--- a/docs/notas/notas.tex
+++ b/docs/notas/notas.tex
@@ -11,5 +11,9 @@ Esto lo escribi en Linux
 
 Eso lo volvi a escribir desde overleaf
 
+Vamos a ver esto, lo escribo una vez reorganizado el repositorio
+
+
+
  
 \end{document}
