--- a/docs/notas/notas.tex
+++ b/docs/notas/notas.tex
@@ -13,6 +13,8 @@ Eso lo volvi a escribir desde overleaf
 
 Vamos a ver esto, lo escribo una vez reorganizado el repositorio
 
+Eso lo escribi con overleaf
+
 
 
  
