--- a/docs/notas/notas.tex
+++ b/docs/notas/notas.tex
@@ -13,9 +13,10 @@ Eso lo volvi a escribir desde overleaf
 
 Vamos a ver esto, lo escribo una vez reorganizado el repositorio
 
-Eso lo escribi con overleaf
+Eso lo escribí con overleaf
 
 
+Nueva linea
 
  
 \end{document}
