--- a/docs/notas/notas.tex
+++ b/docs/notas/notas.tex
@@ -1,22 +1,9 @@
 \documentclass{article}
+\usepackage[utf8]{inputenc}
+\usepackage[spanish]{babel}
+
 \begin{document}
-	Este  es el mismo documento pero lo edite desde overleaf veremos si  puedo sincronizarlo con git
 	
-Vamos a meterle mas lineas desde mi iPad
-
-Y nuevas lineas desde overleaf
-
-Esto lo escribi en Linux
-
-
-Eso lo volvi a escribir desde overleaf
-
-Vamos a ver esto, lo escribo una vez reorganizado el repositorio
-
-Eso lo escribí con overleaf
-
-
-Nueva linea
-
- 
+	Esto es un nuevo documento con encoding utf8: áéíóúüñÑ?!¿¡
+	
 \end{document}
