Cambios en notebook

--- a/notebooks/Procesos_Estocasticos_1.ipynb
+++ b/notebooks/Procesos_Estocasticos_1.ipynb
@@ -21,7 +21,11 @@
         "from matplotlib import pyplot as plt\n",
         "import pandas as pd\n",
         "import scipy.stats as si\n",
-        "from pathlib import Path"
+        "from pathlib import Path\n",
+        "\n",
+        "import getpass\n",
+        "\n",
+        "usuario = getpass.getuser()"
       ]
     },
     {
