Cambios en notebook

--- a/notebooks/Procesos_Estocasticos_1.ipynb
+++ b/notebooks/Procesos_Estocasticos_1.ipynb
@@ -11,11 +11,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "OIK_U_xDeKjr"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ger\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "from matplotlib import pyplot as plt\n",
@@ -25,7 +33,9 @@
         "\n",
         "import getpass\n",
         "\n",
-        "usuario = getpass.getuser()"
+        "usuario = getpass.getuser()\n",
+        "\n",
+        "print(usuario)"
       ]
     },
     {
