--- a/docs/tareas/T1.tex
+++ b/docs/tareas/T1.tex
@@ -17,20 +17,15 @@
 \end{center}
 \hrule
 \par\bigskip
-	Mas texto en rama alternativa
 
-    Esto lo edite directo en origin/master?
-	
-Pongamos una linea adicional
-
-De los problemas siguientes debes entrgar los problemas 2, 3, 11, 12, 14, 15, 16 y 18. Sin embargo es altamente recomendable que intentes resolverlos todos.
+%De los problemas siguientes debes entrgar los problemas 2, 3, 11, 12, 14, 15, 16 y 18. Sin embargo es altamente recomendable que intentes resolverlos todos.
 \begin{enumerate}
     \item Sea $X_n$ con $n\geq 0$ la cadena de Markov de dos estados. Encuentra:
           \begin{enumerate}
               \item $P\left(\left. x_1=0\right\vert X_0=0, X_2=0\right)$
               \item $P\left(X_1\neq X_2\right)$
           \end{enumerate}
-    \item Supongamos que tenemos dos cajas con $2d$ bolas, de las cuales $d$ son negras y $d$ son rojas. Inicialmente $d$ bolas son colocadas en la caja 1 y el resto en la caja 2. En cada intento una bola es seleccionada de cada caja aleatoriamente y es cambiada de caja. Sea $X_0$ el número de bolas blancas que inicialmente se encuentran en la caja 1 y $X_n$ el número de bolas negras en la caja uno después de $n$ extracciones. Encuentra la probabilidad de transición de la cadena de Markov $\left\{X_n\right\}$.
+    \item Supongamos que tenemos dos cajas con $2d$ bolas, de las cuales $d$ son negras y $d$ son blancas. Inicialmente $d$ bolas son colocadas en la caja 1 y el resto en la caja 2. En cada intento una bola es seleccionada de cada caja aleatoriamente y es cambiada de caja. Sea $X_0$ el número de bolas negras que inicialmente se encuentran en la caja 1 y $X_n$ el número de bolas negras en la caja uno después de $n$ extracciones. Encuentra la probabilidad de transición de la cadena de Markov $\left\{X_n\right\}$.
     \item Sea $\left(\Omega, \mathcal{F}, P\right)$ un espacio de probabilidad. Si todos los conjuntos a continuación estan en $\mathcal{F}$, prueba:
           \begin{enumerate}
               \item Si $\left\{D_i\right\}$ es una sucesión de disjuntos, y $P(\left.C\right\vert D_i)=p$ entonces: $P\left(\left. C \right\vert \cup_i D_i\right)=p$.
@@ -46,9 +41,9 @@ De los problemas siguientes debes entrgar los problemas 2, 3, 11, 12, 14, 15, 16
               P\left(X_0= x\right) = \binom{n}{x}\frac{1}{2^d}
           $$
           Encuentra la distribución de $X_1$.
-    \item Demuestra que la cadena de Ehrenfest efectivamente cumple la propiedad de Markov.
-    \item Demuestra que la caminata aleatoria es una cadena de Markov.
-    \item Demuestra que la cadena de la ruina de jugador efectivamente es una cadena de Markov.
+    %\item Demuestra que la cadena de Ehrenfest efectivamente cumple la propiedad de Markov.
+    %\item Demuestra que la caminata aleatoria es una cadena de Markov.
+    %\item Demuestra que la cadena de la ruina de jugador efectivamente es una cadena de Markov.
     \item Escribe la matriz de transición de la cadena de Ehrenfest si d = 7. Dibuja también la gráfica correspondiente.
     \item Escribe la matriz de transición para la cadena de la ruina del jugador si es que suponemos entre los dos jugadores hay \$7 en juego y la probabilidad de ganar del jugador 1 es de $p = 0.4$. Dibuja, también la gráfica de la matriz
     \item La cadena de Markov $\left\{X_n\right\}$ con estados 0, 1, 2 tiene la matriz de transición:
@@ -93,7 +88,7 @@ De los problemas siguientes debes entrgar los problemas 2, 3, 11, 12, 14, 15, 16
           \end{enumerate}
     \item Las variables aleatorias $\xi_1, \xi_2, \ldots$ son independientes distribuidas:
           $$
-              P\left(X_n=k\right)=
+              P\left(\xi_n=k\right)=
               \begin{cases}
                   0.1 \text{ si } k = 0 \\
                   0.3 \text{ si } k = 1 \\
