--- a/docs/tareas/T2.tex
+++ b/docs/tareas/T2.tex
@@ -1,92 +1,58 @@
-\documentclass{report}
-    \usepackage[utf8]{inputenc}
-    \usepackage[spanish]{babel}
-    \usepackage{amsmath}
-    \usepackage{graphics}
-    \usepackage{amssymb}
-    \setlength{\oddsidemargin}{0.5cm}
-    \setlength{\evensidemargin}{0.5cm}
-    \setlength{\textwidth}{15cm}
-    \setlength{\topmargin}{-2cm}
+\documentclass{article}
+\usepackage[spanish]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage[left=3.5cm,right=3.5cm,top=2cm,bottom=2cm]{geometry}
+\usepackage{amsmath,amssymb}
+\decimalpoint
+
+\title{{\LARGE Procesos Estocásticos}\\
+{\Large \textbf{Tarea 2. Elementos de Cadenas de Markov}}}
+\author{}
+\date{\textit{30 de Marzo de 2022}}
 \begin{document}
-\begin{center}
-    \textsf{\Large Procesos Estocásticos}
-    \par\medskip
-    \textsf{\large Tarea 2}
-    \end{center}
-    \hrule
-    \par\bigskip
-
-De los problemas a continuación, deberás entregar los problemas 2, 3, 4, 6 y 8.
+\maketitle
 \begin{enumerate}
-    \item Sea $\left\{X_n\right\}$ una cadena de Markov con espacio de estados $S = \left\{1,2,3\right\}$ y matriz de transición:
-    $$P= \left[
-        \begin{matrix}
-            0.6 & & 0.3 & 0.1 \\
-            0.3 & & 0.3 & 0.4 \\
-            0.4 & & 0.1 & 0.5 \\
-        \end{matrix}
-        \right]
+    \item Prueba que la probabilidad de que \emph{exactamente} uno de los dos eventos $A$ y $B$ ocurra es :
     $$
-
-Si se sabe que el proceso empieza en $X_0=1$, determina la probabilidad $P\left(X_0=1,X_1=0, X_2 = 2 \right)$.
-\item Considera el problema de enviar un mensaje binario 0,1, a través de un canal de señales que consiste de varias estaciones, donde la transmisión a través de cada estación esta sujeta a una probabilidad fija $\alpha$ de error. Supongamos que $X_0=0$ y que $X_n$ es la señal recibida en la estación $n$.  Supongamos que $X_n$ es una cadena de Markov con probabilidades de transición $P(0,0) = P(1,1)= 1-\alpha$ y $P(0,1)=P(1,0)= \alpha$, con $0<\alpha<1$.
-\begin{enumerate}
-    \item Determina la probabilidad $P\left(X_0=0,X_1=0, X_2=0\right)$
-    \item Determina la probabilidad de que la señal recibida en la estacion 2 sea correcta.
+    P(A)+P(B)-2P(A\cap B)
+    $$
+    Prueba que:
+    $$
+    P(A\cup B\cup C) = 1-P(A^c\vert B^c\cap C^c)P(B^c\cap C^c)P(C^c)
+    $$
+    \item Supongamos que $(\Omega,\mathcal{F},P)$ es un espacio de probabilidad y $B\mathcal{F}$ es tal que $P(B)>0$. Sea $Q:\mathcal{F}\rightarrow [0,1]$ definida como $Q(A) = P(A\vert B)$. Muestra que $(\Omega, \mathcal{F},Q)$ es un espacio de probabilidad. Si $C\in\mathcal{F}$ y $Q(C)>0$, muestra que $Q(A\vert C) = P(A\vert B\cap C)$. ¿Cómo interpretas esta último resultado?
+    \item Una cadena de Markov, tiene la matriz de transición:
+    $$
+    \mathbb{P} = \bordermatrix{
+          & 0   & 1   & 2   \cr
+        0 & 0.7 & 0.2 & 0.1 \cr
+        1 & 0   & 0.6 & 0.4 \cr
+        2 & 0.5 & 0   & 0.5 \cr
+    }
+    $$
+    Determina las probabilidades:
+    $$
+    P(X_3 = 1, X_2 = 1 \vert X_1=0) \quad \mbox{ y }\quad P(X_2 = 1, X_1 = 1\vert X_0 = 0)
+    $$
+    \item Demuestra que si $\{X_n\}$ es una cadena de Markov, entonces:
+    $$
+    P(X_0=i_0\vert X_1 =i_1,X_2=i_2 \ldots,X_n=i_n) = P(X_0=i_0\vert X_1 =i_1)
+    $$
+    \item Supongamos que tenemos dos cajas con $2d$ bolas entre ambas. De estas bolas, $d$ son negras y $d$ son rojas. Inicialmente colocamos $d$ bolas en la caja uno y d bolas en la caja dos. En cada ensayo, elegimos aleatoriamente una bola de la caja uno y una bola de la caja dos y las intercambiamos de caja. Denotamos con $X_n$ al número de bolas negras en la caja uno después de $n$ ensayos. Encuentra las probabilidades de transición para la cadena de Markov $\{X_n\}$ y escribe la matriz de transición.
+    \item Una cadena de Markov tiene matriz de transición:
+    $$
+    \mathbb{P} = \bordermatrix{
+          & 1     & 2    & 3   & 4   \cr
+        1 & 1/2   & 1/2  & 0   & 0   \cr
+        2 & 0     & 1/3  & 1/3 & 1/3 \cr 
+        3 & 1/4   & 1/4  & 1/4 & 1/4 \cr 
+        4 & 0     & 0	 & 1/2 & 1/2 \cr 
+    }
+    $$
+    y distribución inicial:
+    $$
+    \pi = (1/2, 1/4,1/8, 1/8)
+    $$
+    Calcula $\pi_n(i) = P(X_n = i)$, para $i\in \{1,2,3,4\}$ y  $n=1,2,3,4$. Calcula $P(X_4\neq X_1)$. Calcula $P(X_5 = 3\vert X_3 = 1,max(X_0,X_1,X_2)<3)$
 \end{enumerate}
-\item Las variables aleatorias $\xi_1, \xi_2, \ldots$ son independientes distribuidas:
-$$
-P\left(X_n=k\right)=
-\begin{cases}
-    0.1 \text{ si } k = 0 \\
-    0.3 \text{ si } k = 1 \\
-    0.2 \text{ si } k = 2 \\
-    0.4 \text{ si } k = 3
-\end{cases}
-$$
-Sea $X_0=0$, y sea $X_n= max\left\{\xi_1, \ldots,\xi_n\right\}$ el $\xi$ máximo observado hasta la fecha. Demuestra que $\left\{X_n\right\}$ es una cadena de Markov y determina la matriz de transición.
-\item Sea $\left\{X_n\right\}$ una cadena de Markov con espacio de estados $S = \left\{0,1,2\right\}$ y matriz de transición:
-$$P= \left[
-    \begin{matrix}
-        0.1 & & 0.2 & 0.7 \\
-        0.2 & & 0.2 & 0.6 \\
-        0.6 & & 0.1 & 0.3 \\
-    \end{matrix}
-    \right]
-$$
-\begin{enumerate}
-    \item Calcula la matriz de transición $P^{(2)}$ en dos pasos.
-    \item Calcula: $P\left(\left. X_3 = 1\right\vert X_1=0\right)$
-    \item Calcula: $P\left(\left. X_3 = 1\right\vert X_0=0\right)$
-\end{enumerate}
-\item Sea $\left\{X_n\right\}$ una cadena de Markov con matriz de transición:
-$$P= \left[
-    \begin{matrix}
-        0.6 & & 0.3 & 0.1 \\
-        0.3 & & 0.3 & 0.4 \\
-        0.4 & & 0.1 & 0.5 \\
-    \end{matrix}
-    \right]
-$$
-Si se sabe que $X_0=1$, determina $P(X_2 = 1)$.
-\item Supongamos que $\left\{X_n\right\}$ es una cadena de Markov con dos estados y matriz de transición:
-$$P= \left[
-    \begin{matrix}
-        \alpha & 1-\alpha \\
-        1-\beta & \beta \\
-    \end{matrix}
-    \right]
-$$
-Demuestra que el proceso $\left\{Z_n\right\}= (X_{n-1}, X_n)$ con estados $(0,0)$, $(0,1)$, $(1,0)$, $(1,1)$, es una cadena de Markov. Determian su matriz de transición.
-\item Sea $\left\{X_n\right\}$ una cadena de Markov. Muestra que
-$$
-P\left(\left.X_0=x_0\right\vert X_1 = x_1, \ldots, X_n = x_n\right) = P\left(\left. X_0=x_0 \right\vert X_1 = x_1\right)
-$$
-\item Sea $\left\{X_n\right\}$ una cadena de Markov. Muestra que
-$$
-P\left(\left.X_{n+m}=x_{n+m}, \ldots, X_{n+1} = x_{n+1}\right\vert X_n = x_n\right) = P\left(\left.X_{m}=x_{n+m}, \ldots, X_{1} = x_{n+1}\right\vert X_0 = x_n\right)
-$$
-\end{enumerate}
-Esto lo escribo desde VSCode web
 \end{document}
