Cambios desde codespaces

--- a/docs/notas/notas.tex
+++ b/docs/notas/notas.tex
@@ -7,5 +7,81 @@
 	Esto es un nuevo documento con encoding utf8: áéíóúüñÑ?!¿¡
 
  Ahora esto lo escribí desde overleaf
-	
-\end{document}
+ 
+ Vamos a ver si puedo compilar desde acá
+
+ Pues si se pudo.
+
+ \begin{abstract}
+	Este es un documento de prueba para ver si puedo compilar desde mi computadora
+ \end{abstract}
+
+ Esto de codespaces es una maravilla
+
+
+Veamos si puedo hacer un commit desde codespaces
+
+Vamosa ver que tal funciona en blink
+
+
+Hasta ahora luce bastante bien
+
+Esto si me esta impresionando, es muy bueno, toda esta combinación de codespaces y github
+
+Escribamos un poco mas de texto para ver como se ve en el editor
+\begin{equation}
+	\int_{a}^{b} f(x) dx = F(b) - F(a)
+\end{equation}
+% Escribe la integral de una distribucion normal
+\begin{equation}
+	\int_{-\infty}^{\infty} \frac{1}{\sqrt{2\pi\sigma^2}} e^{-\frac{(x-\mu)^2}{2\sigma^2}} dx = 1
+\end{equation}
+
+Si que lo hizo bien
+Vamos a escribir un poco mas de texto para ver como se ve en el editor
+
+
+Como se sube un archivo desde codespaces?
+%responde esta pregunta
+
+Mas en codespaces
+
+Adris es una hermanita muy pero muy linda
+
+Yo soy un hermano muy pero muy lindo
+
+Raulito, mi sobrino es un niño muy pero muy lindo
+
+Vamos a escribir un poco mas de texto para ver como se ve en el editor
+
+Tengo que ponerme a escribir las notas de la clase de probabilidad.
+
+Esto lo hice desde mi compu. Vamos a ver si se actualiza en codespaces
+
+
+Tengo que aprender mucho mas de github y aun no lo he hecho!
+
+$$
+\int_{-\infty}^{\infty} \frac{1}{\sqrt{2\pi\sigma^2}} e^{-\frac{(x-\mu)^2}{2\sigma^2}} dx = 1
+$$
+
+¿Cómo hacer para que se vea el código en el editor?
+
+
+Marcela es una doctora de las buenas llevo varios años con ella y me ha ayudado mucho. Es una psiquiatra muy buena y muy linda.
+
+
+
+El tratamiento sugerido para tratar la ansiedad es el siguiente:
+
+1. Tomar 1 pastilla de Sertralina de 50 mg cada 24 horas
+2. Tomar 1 pastilla de Alprazolam de 0.25 mg cada 8 horas
+3. Tomar 1 pastilla de Clonazepam de 0.5 mg cada 12 horas
+
+El tratamiento para la ansiedad funciona de mejor manera si 
+Ahora vamos a escribir desde linux
+
+
+
+
+\end{document}	
