Updates from Overleaf

--- a/docs/notas/notas.tex
+++ b/docs/notas/notas.tex
@@ -1,11 +1,26 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 
 \begin{document}
 	
 	Esto es un nuevo documento con encoding utf8: áéíóúüñÑ?!¿¡
-
+Hola mundo
  Ahora esto lo escribí desde overleaf
-	
+
+
+
+ Esto lo estoy escribiendop con mi tecladito chiquito... con mis dedotes grandototes... debo acostumbrarme a  usarlo!
+
+ Me gusta mucho este pequeñin
+
+
+ Ahora escribo con mi nuevo teclado de logitech. En verdad que esta muy bueno tambien! Se sienten muy bien las teclas.
+
+Me dan ganas de comprar otro mas. Veremos como funciona con Linux y con mi nuevo monitorcito...
+
+\begin{equation}
+    \int x^2 dx = \frac{x^3}{2}
+\end{equation}
+
 \end{document}
